--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'groovy'
 
 group = 'se.transmode.gradle'
-version = '1.0'
 
 buildscript {
     // inspired by https://github.com/Netflix/gradle-template
@@ -15,6 +14,16 @@ repositories {
 apply from: file('gradle/license.gradle')
 apply from: file('gradle/idea.gradle')
 apply from: file('gradle/maven.gradle')
+
+def getVersionName() {
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'describe', '--tags'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+version = getVersionName()
 
 sourceSets {
     integTest {
