Use '--long' flag on 'git describe'.

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply from: file('gradle/maven.gradle')
 def getVersionName() {
     def stdout = new ByteArrayOutputStream()
     exec {
-        commandLine 'git', 'describe', '--tags'
+        commandLine 'git', 'describe', '--tags', '--long'
         standardOutput = stdout
     }
     return stdout.toString().trim()
