--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 apply plugin: 'docker'
 
 buildscript {
-    repositories { mavenCentral() }
+    repositories { jcenter() }
     dependencies {
         classpath 'se.transmode.gradle:gradle-docker:1.1.1'
     }
