--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 # use gradle daemon by default
 org.gradle.daemon = true
+
+# Artifactory
+artifactoryUrl = https://oss.jfrog.org/artifactory
+artifactoryRepo = oss-snapshot-local
