--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'maven-publish'
+apply plugin: 'artifactory-publish'
 
 publishing {
     publications {
@@ -16,6 +17,23 @@ publishing {
                 username = bintrayUser
                 password = bintrayKey
             }
+        }
+    }
+}
+
+artifactory {
+    contextUrl = artifactoryUrl
+    resolve {
+        repoKey = "repo"
+    }
+    publish {
+        repository {
+            repoKey = artifactoryRepo
+            username = bintrayUser
+            password = bintrayKey
+        }
+        defaults {
+            publications ('maven')
         }
     }
 }
