--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ version=1.2-SNAPSHOT
 # use gradle daemon by default
 org.gradle.daemon = true
 
-# Artifactory
+# ArtifactoryOSS / Bintray
 artifactoryUrl = https://oss.jfrog.org/artifactory
 artifactoryRepo = oss-snapshot-local
+bintrayUser = myUser
+bintrayKey = myKey
