--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
 
 repositories {
     jcenter()
+
+    // Needed to get SNAPSHOT version of java-docker API
+    maven {
+        url 'https://oss.sonatype.org/content/groups/public/'
+    }
 }
 
 apply from: file('gradle/license.gradle')
@@ -38,6 +43,9 @@ configurations {
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    
+    // We need the 0.9.1 version which hasn't been released yet
+    compile 'com.github.docker-java:docker-java:0.9.1-SNAPSHOT'
 
     testCompile 'junit:junit-dep:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
