Fixed config file for Drone CI.

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 image: openjdk7
 script:
-  ./gradlew assemble
-  ./gradlew check
+  - ./gradlew assemble
+  - ./gradlew check
 notify:
   email:
     recipients:
