--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 repositories {
     jcenter()
 
-    // Needed to get SNAPSHOT version of java-docker API
+    // @fixme: Remove snapshot repo when java-docker 0.9.1 is released.
     maven {
         url 'https://oss.sonatype.org/content/groups/public/'
     }
@@ -43,8 +43,8 @@ configurations {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    
-    // We need the 0.9.1 version which hasn't been released yet
+
+    // @fixme: Switch to 0.9.1 release once it is release, for now we use SNAPSHOT
     compile 'com.github.docker-java:docker-java:0.9.1-SNAPSHOT'
 
     testCompile 'junit:junit-dep:4.11'
