Re-added license, scm, project... metadata to pom.

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -7,6 +7,41 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact javadocJar
+
+            pom.withXml {
+                asNode().with {
+
+                    appendNode('name', 'gradle-docker')
+                    appendNode('description', 'Gradle plugin to build und publish Docker images from the build script.')
+                    appendNode('url', 'https://github.com/Transmode/gradle-docker')
+                    appendNode('inceptionYear', '2013')
+
+                    appendNode('licenses').appendNode('license').with {
+                        appendNode('name', 'The Apache Software License, Version 2.0')
+                        appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
+                        appendNode('distribution', 'repo')
+                    }
+
+                    appendNode('developers').appendNode('developer').with {
+                        appendNode('id', 'mattgruter')
+                        appendNode('name', 'Matthias Grüter')
+                        appendNode('email', 'matthias.gruter@transmode.com')
+                        appendNode('roles').appendNode('role', 'Developer')
+
+                    }
+
+                    appendNode('issueManagement').with {
+                        appendNode('system', 'github')
+                        appendNode('url', 'https://github.com/Transmode/gradle-docker/issues')
+                    }
+
+                    appendNode('scm').with {
+                        appendNode('connection', 'scm:git@github.com/Transmode/gradle-docker.git')
+                        appendNode('developerConnection', 'scm:git@github.com/Transmode/gradle-docker.git')
+                        appendNode('url', 'scm:git://github.com/Transmode/gradle-docker.git')
+                    }
+                }
+            }
         }
     }
 
