Examples: Fetch gradle-docker from mavenLocal first, then from jcenter

--- a/examples/application/build.gradle
+++ b/examples/application/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 apply plugin: 'docker'
 
 buildscript {
-    repositories { jcenter() }
+    repositories { mavenLocal(); jcenter() }
     dependencies {
         classpath 'se.transmode.gradle:gradle-docker:1.2'
     }
