--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
+    compile 'com.google.guava:guava:17.0'
     compile 'com.github.docker-java:docker-java:0.9.0'
 
     testCompile 'junit:junit-dep:4.11'
