--- a/gradle/license.gradle
+++ b/gradle/license.gradle
@@ -4,4 +4,5 @@ license {
     header rootProject.file('codequality/HEADER')
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
     ext.name = 'Transmode AB'
+    exclude '**/*.txt'
 }
