Updating examples to use gradle 2.0 (issue #14)

--- a/examples/application/build.gradle
+++ b/examples/application/build.gradle
@@ -9,6 +9,10 @@ buildscript {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
+
 sourceCompatibility = 1.7
 group = 'example'
 version = '1.0'
