--- a/examples/simple/build.gradle
+++ b/examples/simple/build.gradle
@@ -7,6 +7,10 @@ buildscript {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
+
 group = 'org.acme'
 
 docker {
@@ -14,7 +18,6 @@ docker {
 }
 
 task nginxDocker(type: Docker) {
-
     // The default image tag contains the applicationName
     applicationName = 'nginx'
 
