--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 group=se.transmode.gradle
-version=1.2-SNAPSHOT
+version=1.2
 
 # use gradle daemon by default
 org.gradle.daemon = true
 
 # ArtifactoryOSS / Bintray
 artifactoryUrl = https://oss.jfrog.org/artifactory
-artifactoryRepo = oss-snapshot-local
+artifactoryRepo = oss-release-local
 bintrayUser = myUser
 bintrayKey = myKey
