Add support for running Docker containers
As part of this I created a common super-class used by the now 2 gradle
tasks.

Added tests (though testing of the run command is non-existant, still
figuring that one out)

Fixes to build files post rebase

Expand tests and fix a couple of issues found

WIP - fix relating to run with volumes

Move to released docker-java code and some formatting tweaks

Fixed 2 bugs found on Linux

More fixes to the native client

The image name (aka "tag") needs to be the last element of the command
line.

The separator for most of the key value arguments is a ':', though for env
we need an '='.

Complete previous fix.

--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,13 @@ configurations {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'com.google.guava:guava:17.0'
 
     compile 'com.google.guava:guava:17.0'
-    compile 'com.github.docker-java:docker-java:0.9.0'
+    compile 'com.github.docker-java:docker-java:0.9.1'
 
     testCompile 'junit:junit-dep:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.mockito:mockito-core:1.9.5'
 }
 
 task integTest(type: Test) {
