Switch to new dockerfile DSL, use by default
Show a deprectation warning if the old methods are used.

--- a/examples/simple/build.gradle
+++ b/examples/simple/build.gradle
@@ -33,5 +33,7 @@ task nginxDocker(type: Docker) {
         from 'input'
         into 'docs'
     }
-    defaultCommand("/bin/bash")
+    defaultCommand(["/bin/bash"])
+
+    dryRun = true
 }
