--- a/examples/application/Dockerfile.expected
+++ b/examples/application/Dockerfile.expected
@@ -1,4 +1,4 @@
-FROM dockerfile/java
+FROM java:openjdk-7-jre
 EXPOSE 8080
 ADD docker-jetty-1.0.tar /
-ENTRYPOINT ["/docker-jetty-1.0/bin/docker-jetty"]
+ENTRYPOINT ["/docker-jetty/bin/docker-jetty"]
