Fixed bug in add(copySpec) instruction

--- a/examples/simple/Dockerfile.expected
+++ b/examples/simple/Dockerfile.expected
@@ -1,5 +1,6 @@
-FROM ubuntu
+FROM debian:jessie
 RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
 RUN apt-get update
-RUN apt-get install -y inotify-tools nginx apache2 openssh-server
-MAINTAINER Victor Vieux <victor@docker.com>
+RUN apt-get install -y nginx
+ADD add_4.tar /
+MAINTAINER John Doe <john@doe.com>
