--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'groovy'
+apply plugin: 'jacoco'
 
 buildscript {
     // inspired by https://github.com/Netflix/gradle-template
@@ -61,6 +62,13 @@ integTest.mustRunAfter test
 integTest.dependsOn publishToMavenLocal
 
 check.dependsOn(integTest)
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
