--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
-dist: trusty
+dist: precise
+sudo: required
 language: java
 jdk:
   - openjdk7
+addons:
+  hostname: fake-hostname
 script:
   - ./gradlew check
   - ./gradlew jacocoTestReport
@@ -14,8 +17,3 @@ cache:
     - $HOME/.gradle/wrapper/
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-before_install:
-  - ln -s /usr/share/java/bcprov.jar /usr/lib/jvm/java-7-openjdk-amd64/jre/lib/ext/bcprov.jar && \
-         awk -F . -v OFS=. 'BEGIN{n=2}/^security\.provider/ {split($3, posAndEquals, "=");$3=n++"="posAndEquals[2];print;next} 1' /etc/java-7-openjdk/security/java.security > /tmp/java.security && \
-         echo "security.provider.1=org.bouncycastle.jce.provider.BouncyCastleProvider" >> /tmp/java.security && \
-         mv /tmp/java.security /etc/java-7-openjdk/security/java.security
