--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
 }
 
 repositories {
-    jcenter()
+  maven { 
+      url = "http://jcenter.bintray.com"
+  }
 }
 
 apply from: file('gradle/idea.gradle')
