--- a/examples/application/build.gradle
+++ b/examples/application/build.gradle
@@ -10,7 +10,7 @@ buildscript {
       }
     }
     dependencies {
-        classpath 'se.transmode.gradle:gradle-docker:1.3-SNAPSHOT'
+        classpath 'se.transmode.gradle:gradle-docker:1.3'
     }
 }
 
