Gradle: update to 4.x (#145)
* Gradle: update to 4.9

* Artifactory: upgraded build-info plugin to 4.7.5

* Gradle: wrapper set to 4.9

* Added base image for java10 and java11

* Fixed some deprecations

* Specific base image for application example, requirement for using older gradle versions

* Gradle: bumped to 4.10.2

* Removed wrapper task

--- a/build.gradle
+++ b/build.gradle
@@ -15,20 +15,10 @@ repositories {
 apply from: file('gradle/idea.gradle')
 apply from: file('gradle/publish.gradle')
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.10'
-}
-
 sourceSets {
     integTest {
         compileClasspath += main.output + test.output
         runtimeClasspath += main.output + test.output
-        groovy {
-            srcDir 'src/integTest/groovy'
-        }
-        resources {
-            srcDir 'src/integTest/resources'
-        }
     }
 }
 
@@ -52,11 +42,11 @@ dependencies {
 task integTest(type: Test) {
     group = 'verification'
     description = 'Runs the integration tests.'
-    testClassesDir = sourceSets.integTest.output.classesDir
+    testClassesDirs = sourceSets.integTest.output.classesDirs
     classpath = sourceSets.integTest.runtimeClasspath
 
-    reports.html.destination = file("${reporting.baseDir}/integTests")
-    reports.junitXml.destination = file("$buildDir/integTest-results")
+    //reports.html.dir = file("${reporting.baseDir}/integTests")
+    //reports.junitXml.destination = file("$buildDir/integTest-results")
 }
 
 // run integration tests after unit tests if both are scheduled for execution
@@ -67,8 +57,8 @@ check.dependsOn(integTest)
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.enabled = true
+        html.enabled = true
     }
 }
 
